--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       body { background:#222222; color:#ffffff; }
       img { display:block; height:100%; margin-left:auto; margin-right:auto; }
     </style>
+    <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body>
     <img src ="images/phpbsd.jpg"/>
