--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="utf-8"/>
     <title>PHPBSD.net</title>
     <style>
-      html,body { margin:0; height:100%; }
-      body { background:#222222; color:#ffffff; }
-      img { display:block; height:100%; margin-left:auto; margin-right:auto; }
+      body { background:#ffffff; color:#222222; }
+      img { display:block; width:100%; margin-left:auto; margin-right:auto; }
+      h1 { font-size:48px; font-family:sans-serif; margin:20px; }
+      p { font-size:24px; font-family:sans-serif; margin:20px; }
+      a {color:#000000; text-decoration:none; }      
     </style>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
   </head>
   <body>
-    <img src ="images/phpbsd.jpg"/>
+    <h1>PHPBSD.net</h1>
+    <img src ="/images/phpbsd.jpg"/>
+    <p>Hache mucho tiempo, en una galaxia no tan lejana...</p>
+    <p>Aquí había un blog mantenido por <a href="https://orioljimenez.com.com">Oriol Jiménez</a> dedicado al lenguaje de programación PHP y al sistema operativo FreeBSD.</p>
   </body>
 </html>
