--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="utf-8"/>
     <title>PHPBSD.net</title>
     <style>
-      body { background:#ffffff; color:#222222; }
-      img { display:block; width:100%; margin-left:auto; margin-right:auto; }
+      body { background:#ffffff; color:#222222; margin-bottom:40px; }
+      img { display:block; width:90%; margin-left:auto; margin-right:auto; margin-top:40px; margin-bottom:40px; }
       h1 { font-size:48px; font-family:sans-serif; margin:20px; }
-      p { font-size:24px; font-family:sans-serif; margin:20px; }
-      a {color:#000000; text-decoration:none; }      
+      p { color:#555555; font-size:24px; font-family:sans-serif; margin:20px; }
+      a { color:#000000; text-decoration:none; }
+      hr { height:2px; color:#999999; background-color:#999999; }
     </style>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
   </head>
   <body>
     <h1>PHPBSD.net</h1>
+    <hr/>
     <img src ="/images/phpbsd.jpg"/>
     <p>Hache mucho tiempo, en una galaxia no tan lejana...</p>
-    <p>Aquí había un blog mantenido por <a href="https://orioljimenez.com.com">Oriol Jiménez</a> dedicado al lenguaje de programación PHP y al sistema operativo FreeBSD.</p>
+    <p>Aquí había un blog mantenido por <a target="_blank" href="https://orioljimenez.com">Oriol Jiménez</a> dedicado al lenguaje de programación PHP y al sistema operativo FreeBSD.</p>
   </body>
 </html>
