--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <title>PHPBSD.net</title>
+
+    <meta name="author" content="Oriol Jiménez"/>
+    <meta name="description" content="Blog dedicado al lenguaje de programación PHP y al sistema operativo FreeBSD"/>
+    <meta name="keywords" content="phpbsd, php, bsd, unix, freebsd"/>
+    
     <style>
       body { background:#ffffff; color:#222222; margin-bottom:40px; }
       img { display:block; width:90%; margin-left:auto; margin-right:auto; margin-top:40px; margin-bottom:40px; }
