--- a/404.html
+++ b/404.html
@@ -2,28 +2,17 @@
 <html lang="es">
   <head>
     <meta charset="utf-8"/>
-    <title>PHPBSD.net - Página no encontrada</title>
-
+    <title>Página no encontrada - PHPBSD.net</title>
     <meta name="author" content="Oriol Jiménez"/>
     <meta name="description" content="Blog dedicado al lenguaje de programación PHP y al sistema operativo FreeBSD"/>
-    <meta name="keywords" content="phpbsd, php, bsd, unix, freebsd"/>
-    
+    <meta name="keywords" content="phpbsd, php, bsd, unix, freebsd"/>    
     <meta http-equiv="refresh" content="2; url=https://phpbsd.net"/>
-    
-    <style>
-      body { background:#ffffff; color:#222222; margin-bottom:40px; }
-      img { display:block; width:90%; margin-left:auto; margin-right:auto; margin-top:40px; margin-bottom:40px; }
-      h1 { font-size:48px; font-family:sans-serif; margin:20px; }
-      p { color:#555555; font-size:24px; font-family:sans-serif; margin:20px; }
-      a { color:#000000; text-decoration:none; }
-      hr { height:2px; color:#999999; background-color:#999999; }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
   </head>
   <body>
-    <h1>PHPBSD.net - Página no encontrada</h1>
+    <h1>Página no encontrada</h1>
     <hr/>
     <p>Redirigiendo a la página principal...</p>
-    <p>Clica <a href="https://phpbsd.net">aquí</a> si no has sido redirigido.</p>
   </body>
 </html>
